--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
 spring.sql.init.mode=always
+
+spring.jpa.defer-datasource-initialization=true
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
@@ -11,7 +14,8 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
 # TODO Append connection to DB
 #---
-spring.config.activate.on-profile=ci,test
+spring.h2.console.enabled=true
+#spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
