--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://db:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://db:${DB_PORT}/${DB_NAME}
+#spring.datasource.username=${POSTGRES_USER}
+#spring.datasource.password=${POSTGRES_PASSWORD}
 #---
 server.port=9090
 spring.jpa.hibernate.ddl-auto=none
@@ -11,7 +11,7 @@ spring.sql.init.mode=always
 logging.level.org.zalando.logbook=TRACE
 #---
 spring.h2.console.enabled=true
-#spring.config.activate.on-profile=ci,test
+spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=test
